--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
 #map-canvas { height: 100% }
+
+#map-controls {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	background: #F00;
+	width: 100%;
+}
+
+.map-control {
+	font-size: 2rem;
+}
