--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,34 @@
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
-#map-canvas { height: 100% }
-
-#map-controls {
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	background: #F00;
-	width: 100%;
+html {
+    height: 100%;
 }
 
-.map-control {
-	font-size: 2rem;
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#canvas {
+    height: 100%;
+    width: 100%;
+}
+
+#panels {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 25%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    color: #FFF;
+}
+
+#panels .panel {
+    padding: 0.5em 5%;
+}
+
+#panels .panel-heading {
+    margin: 0;
+    border-top: 3px solid #FFF;
+    text-transform: uppercase;
 }
