--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 #panels {
     position: fixed;
-    right: 0;
+    left: 0;
     top: 3%;
     width: 25%;
     height: 94%;
@@ -23,7 +23,7 @@ body {
     color: #FFF;
     overflow-y: auto;
     overflow-x: hidden;
-    border-radius: 1em 0 0 1em;
+    border-radius: 0 1em 1em 0;
 }
 
 #panels .panel {
