Reduces API calls by only calculating directions when user explicitly completes the route by clicking the Finish Route button.

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     left: 0;
     top: 3%;
     width: 25%;
+    min-width: 370px;
     height: 94%;
     background: rgba(0,0,0,0.7);
     color: #FFF;
