--- a/css/style.css
+++ b/css/style.css
@@ -13,32 +13,85 @@ body {
     width: 100%;
 }
 
-#panels {
+#controls {
     position: fixed;
-    left: 0;
-    top: 3%;
-    width: 25%;
-    min-width: 370px;
-    height: 94%;
-    background: rgba(0,0,0,0.7);
-    color: #FFF;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-radius: 0 1em 1em 0;
+    top: 5px;
+    right: 5px;
+    text-align: center;
+    overflow: visible;
 }
 
-#panels .panel {
-    padding: 0 5%;
+#controls .control {
+    padding: 1px 6px;
+    border: 1px solid rgb(113, 123, 135);
+    border-right: 0;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px 0px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px 0px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px 0px;
+    background: rgb(255,255,255);
+    font-size: 13px;
+    height: 19px;
+    display: block;
+    float: left;
 }
 
-#panels .controls {
-    padding-top: 1em;
-    padding-bottom: 1em;
+#controls .control:last-child {
+    border: 1px solid rgb(113, 123, 135);
+}
+
+#elevation {
+    position: fixed;
+    top: 47px;
+    right: 5px;
+    width: 400px;
+    height: 200px;
+    background: rgba(255,255,255,0.5);
+    border: 1px solid rgb(113, 123, 135);
+    -webkit-box-shadow: inset rgba(0, 0, 0, 0.4) 0px 2px 4px 0px;
+    -moz-box-shadow: inset rgba(0, 0, 0, 0.4) 0px 2px 4px 0px;
+    box-shadow: inset rgba(0, 0, 0, 0.4) 0px 2px 4px 0px;
+    border-radius: 4px;
+}
+
+#elevation .inset-heading {
+    margin: 0;
+    padding: 0.5em 0;
+    text-transform: uppercase;
+    color: rgba(113, 123, 135, 0.5);
     text-align: center;
 }
 
-#panels .panel-heading {
+#results {
+    position: fixed;
+    border-top: 0.5em solid #000;
+    bottom: 18px;
+    height: 10em;
+    background: rgba(0,0,0,0.7);
+    color: #FFF;
+    overflow: hidden;
+    width: 100%;
+    overflow: auto;
+    font-size: 1.5em;
+}
+
+#results .panel {
+    width: 33.333333%;
+    height: 100%;
+    float: left;
+}
+
+#results .panel .panel-heading {
     margin: 0;
-    border-top: 3px solid #FFF;
     text-transform: uppercase;
+    background: #000;
+    padding: 0 5% 0.5em 5%;
+}
+
+#results .panel .panel-content {
+    font-size: 0.75em;
+    padding: 0.5em 5% 0.5em 5%;
+}
+
+.todo {
+    color: #F00;
 }
