--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,26 @@ body {
     text-transform: uppercase;
     background: #000;
     padding: 0 5% 0.5em 5%;
+    position: relative;
+    overflow: auto;
+}
+
+#results .panel .panel-heading .modes {
+    float: right;
+    padding-right: 2em;
+}
+
+#results .panel .panel-heading .modes .mode {
+    font-size: 14px;
+    line-height: 14px;
+    vertical-align: text-top;
+    box-shadow: none;
+    border: 0;
+    background: #555;
+    color: #FFF;
+    border-radius: 0.5em;
+    margin-top: 4px;
+    padding: 6px;
 }
 
 #results .panel .panel-content {
@@ -94,4 +114,8 @@ body {
 
 .todo {
     color: #F00;
+}
+
+.clear {
+    clear: both;
 }
